@startuml
title vista - Pantallas y reproductores

skinparam classAttributeIconSize 0
skinparam shadowing false

package "vista" #FFFFFF {

  class PantallaJuego {
    - Partida partida
    - Stage stage
    - StackPane gridLayer
    - StackPane gridOverlay
    - StackPane animOverlay
    - GridPane inventarioGrid
    - VBox logContainer
    - VBox accionesBox
    - StackPane feedbackPane
    - StackPane ayudaPane
    - StackPane pausaPane
    - boolean pausaVisible
    - boolean partidaFinalizada
    - int[][] visibilidad
    - Pane gridFog
    - ImageView jugadorSprite
    ..
    + Scene crearScene()
    + void actualizar()
    + void toggleAyuda()
    + void togglePausa()
    + void setAlCambiarCueva(Runnable r)
    + void setAlTerminarPartida(Runnable r)
    + void mostrarFeedback(String msg, Color c)
    + void animarMovimiento(int oldF, int oldC)
    + void animarAtaque(int f, int c)
    + void animarMuerteEnemigo(int f, int c, String a)
    + void animarProyectil(int of, int oc, int df, int dc)
    + boolean dispararBolaFuego(int df, int dc)
    + boolean dispararBolaHielo(int df, int dc)
  }

  class PantallaIntroduccion {
    - Runnable alContinuar
    + Scene crearScene()
  }

  class PantallaTransicion {
    - DatosTemaCueva tema
    - Runnable alEntrar
    + Scene crearScene()
  }

  class PantallaFinal {
    - boolean victoria
    - ResultadoPartidaDTO resultado
    - Runnable volverAlMenu
    + Scene crearScene()
  }

  enum DatosTemaCueva {
    CRIPTAS
    PARAMO
    ABISMO
    ..
    + paraCuevaId(String id)
  }

  class ReproductorMusica {
    - instancia
    ..
    + getInstancia()
    + void reproducir()
    + void reproducir(String ruta)
    + void detener()
    + void setVolumen(double)
  }

  class ReproductorSfx {
    - instancia
    ..
    + getInstancia()
    + void reproducirRecoger()
    + void reproducirAtaque()
    + void reproducirDano()
    + void reproducirPuerta()
    + void reproducirGuardar()
    + void reproducirPausa()
    + void reproducirDisparoBolaFuego()
    + void setVolumen(double)
  }

  PantallaJuego --> Partida
  PantallaTransicion --> DatosTemaCueva
  PantallaFinal --> ResultadoPartidaDTO
}
@enduml
